# utfpr

./: .gitattributes  .gitignore  .gitmodules  README.md
02 - Analise exploratoria/: Analise geografica.ipynb  Enem_desistencias.ipynb  RELATORIO_DTB_BRASIL_MUNICIPIO.csv  abstencao_estados_taxa.csv  abstencao_municipios_taxa.csv  correlacao.csv  df_municipios_abstencao.csv  eda_covid.ipynb  exploratoria_enem_socio_economico.ipynb  idhm_estados.csv  processamento.py  taxas_abstencao_municipio.csv  taxas_abstencao_municipio_aplicacao.csv
02 - Analise exploratoria/.ipynb_checkpoints/: IDH-checkpoint.ipynb
04 - Pesquisa/: Regressão linear por estado.ipynb  dados_estados_pib.csv  dados_municipios_pib.csv  df_final.csv  df_projeto_final_covid_e_escola.csv  pib.csv  socio_stats_wide_cities.csv
analise_desenvolvimento_de_sistemas/Acesso_Negado/: db.sqlite3
banco_de_dados/: importacao.py
big_data/: processamento.py
ciencia_de_dados/02 - Analise exploratoria/: abstencao_estados.csv  abstencao_municipios.csv  df_estados_abstencao.csv  df_merge.csv  regioes.csv
ciencia_de_dados/03 - Projeto/: README.md
ciencia_de_dados/04 - Pesquisa/: codigos.csv  desempenho_escolar_e_covid.ipynb  df_coef.csv  df_covid_final_mes_municipio_dif.csv  taxas_abstencao_estado.csv
ciencias_das_redes/aps/: grafo_final_atores_juntos.gml  previsao.ipynb
ciencias_das_redes/desafio_parte_2/: GraphMissingEdges.gml  teste_final.ipynb
ciencias_das_redes/exercicio_4/: Atividade4.ipynb
ciencias_de_dados/02 - Analise exploratoria/: PIB_per_capita_final.csv  enem_desistencias.ods
ciencias_de_dados/04 - Pesquisa/: clusterização.ows  dados_estados_idh.csv  dados_municipios_idh.csv  idh.csv  processamento_final_covid_e_escola.ipynb
cienciea_das_redes/aps/: comunidades.py  correlacao.ipynb  gerar_rede.py
cienciea_das_redes/desafio_parte_1/: Pipfile
cienciea_das_redes/desafio_parte_2/: Pipfile  teste_arestas.csv
cienciea_das_redes/exercicio_1/: main.py
cienciea_das_redes/exercicio_3/: Pipfile  main_1.py  main_2.py  resultados
cienciea_das_redes/exercicio_4/: Pipfile  categories.csv
cienciea_das_redes/exercicio_5/: Exercício Pytorch.ipynb  Pipfile  exercicio.ipynb
comunicao_de_dados/: .gitignore  README.md  pubspec.yaml
comunicao_de_dados/lib/: CodigoLinha.dart  Grafico.dart  cliente.dart  main.dart  servidor.dart
comunicao_de_dados/test/: widget_test.dart
desenvolvimento_de_sistemas/Acesso_Negado/: manage.py
desenvolvimento_integrado_de_sistemas/: .gitignore  g-3.txt  main.py  modelo.json
desenvolvimento_integrado_de_sistemas/cliente/: .gitignore  pubspec.yaml
desenvolvimento_integrado_de_sistemas/server/: Cargo.toml  foo.pgm  test.db
desenvolvimento_integrado_de_sistemas/server/csv/: .gitignore  a.out  g-1.txt  out.pgm
desenvolvimento_integrado_de_sistemas/server/src/: actions.rs  calculo_algoritmos.rs  main.rs  models.rs  schema.rs
desenvolvimento_integrado_de_sistemas/server/src/calculo_algoritmos/: ccgn.rs  fista.rs  ler_csv.rs  salvar_img.rs
estrutura_de_dados/arquivo_invertido/: README.md  arquivo_invertido.py
estrutura_de_dados/arvore_b/: Makefile  README.md  arvoreb.h  buscaArvoreb.c  criaArvoreb.c  insereArvoreb.c  mainArvoreb.c  printArvoreb.c  removeArvoreb.c
fundamentos_de_programacao/projeto 1/: q1_daniel_kelvin.c  q2_daniel_kelvin.c  (+1 more)
processamento_digital_de_imagens/: conteudo.md
recuperacao_de_informacao/: .gitignore  README.md
recuperacao_de_informacao/03 - Projeto/: bertopics - analysis.ipynb  bertopics - create.ipynb  calcular_similaridade.py  filtro.py  graph topics.ipynb  lda.py  pyproject.toml
recuperacao_de_informacao/03 - Projeto/.ipynb_checkpoints/: filtro-checkpoint.py  regressao-checkpoint.ipynb  tmp-checkpoint.ipynb
recuperacao_de_informacao/03 - Projeto/bertopics_virtual_enviroment/: pyproject.toml
recuperacao_de_informacao/03 - Projeto/teste_similaridade/: README.md  pyproject.toml
recuperacao_de_informacao/03 - Projeto/teste_similaridade/src/teste_similaridade/: __init__.py  tmp.py
seguranca_de_redes_e_sistemas/trabalho_2/: Cargo.toml
seguranca_de_redes_e_sistemas/trabalho_2/src/banco/: app.json  servidor.json
seguranca_de_redes_e_sistemas/trabalho_2/src/include/: aux.rs
seguranca_de_redes_e_sistemas/trabalho_2/src/modelos/: mod.rs  usuario_app.rs  usuario_servidor.rs
sistemas_distribuidos/: README.md
sistemas_distribuidos/agendador_eventos_rest/cliente/: Cargo.toml
sistemas_distribuidos/agendador_eventos_rest/cliente/src/: main.rs  modelos.rs
sistemas_inteligentes/busca A estrela/: Agente.hpp  CMakeLists.txt  main.cpp
sistemas_inteligentes/busca A estrela/Ambiente/: Model.cpp  View.hpp
sistemas_inteligentes/busca A estrela/comuns/: Labirinto.cpp
sistemas_inteligentes/busca A estrela/problema/: Estado.hpp  Problema.cpp
sistemas_inteligentes/busca A*|a estrela/: Agente.cpp  CMakeLists.txt
sistemas_inteligentes/busca A*|a estrela/Ambiente/: Model.hpp  View.cpp
sistemas_inteligentes/busca A*|a estrela/arvore/: TreeNode.cpp  TreeNode.hpp
sistemas_inteligentes/busca A*|a estrela/comuns/: Labirinto.hpp  PontosCardeais.hpp
sistemas_inteligentes/busca A*|a estrela/problema/: Estado.cpp  Problema.hpp
sistemas_operacionais/Trabalho1/A/parte_3/: CMakeLists.txt
sistemas_operacionais/Trabalho2/: CMakeLists.txt  disk.c  pingpong-disco1.c  ppos-core-task-aux.c  ppos.h  ppos_data.h  ppos_disk.c  ppos_disk.h
sistemas_operacionais/Trabalho2/.cache/clangd/index/: disk.h.C0B8C1AAEC484EDE.idx  pingpong-disco2.c.891A766469A051EA.idx  ppos-core-globals.h.34BB38D1F69D1F00.idx  ppos-core-task-aux.c.B5789D33A39351D3.idx  ppos.h.4FE0FFCB7A190802.idx  ppos_data.h.158BF4708EA48DA9.idx  ppos_disk.c.6A9BDDBF67679817.idx  ppos_disk.h.FB580C696D22F03B.idx  queue.h.D7BD362A81851B20.idx
sistemas_operacionais/Trabalho2/ping-pong-os-apnp-2020-2-v4---kit-alunos-20210512/: ppos-core-globals.h
trabalho_1/: Cargo.toml  original.txt
trabalho_1/src/: lib.rs
trabalho_5/: main.py
(+177 files in other folders)
