[package]
name = "trabalho_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
rand = "0.8.5"


[[bin]]
name = "cesar"
src = "/src/cesar.rs"

[[bin]]
name = "analisador"
src = "/src/analisador.rs"

[[bin]]
name = "vernam"
src = "/src/vernam.rs"
