[package]
name = "servidor"
version = "0.1.0"
authors = ["rul3r <andersoncjs96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1.0.125"
r2d2 = "0.8.9"
diesel = { version = "^1.1.0", features = ["sqlite", "r2d2"] }
dotenv = "0.15"
rayon = "1.5.0"
ndarray-stats = "0.5"
ndarray = { version = "0.15.1",features = ["rayon","matrixmultiply-threading"]}
chrono = "0.4.19"
image = "0.23.14"
