[tool.poetry]
name = "03 - projeto"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
pybind11 = "^2.10.4"
fasttext = "^0.9.2"
polars = "^0.17.13"
scikit-learn = "^1.2.2"
pyarrow = "^12.0.0"
pandas = "^2.0.1"
contractions = "^0.1.73"
nltk = "^3.8.1"
spacy = "^3.5.3"
textblob = "^0.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
