[package]
name = "trabalho_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex-literal = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sha2 = "0.10.6"
sha256 = "1.1.2"


[[bin]]
name = "servidor"
src = "/src/servidor.rs"

[[bin]]
name = "app"
src = "/src/app.rs"
