[tool.poetry]
name = "bertopics_virtual_enviroment"
version = "0.1.0"
description = ""
authors = ["tredeneo <tredeneo@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
bertopic = "^0.15.0"
jupyterlab = "^4.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
