[project]
name = "teste-similaridade"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "sla", email = "tredeneo@hotmail.com" }
]
dependencies = [
    "spacy~=3.5.3",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
