[package]
name = "cliente"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version= "0.11.6",features = ["json"]}
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
chrono = {version ="0.4.19",features = ["serde"]}
eventsource-client = "0.7.0"
futures = "0.3.18"
